force-app/main/default/objects/Daily_Sales_Report__c/Daily_Sales_Report__c.object-meta.xml
<CustomObject>
    <label>Daily Sales Report</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Sales Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Sales Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>