force-app/main/default/objects/Daily_Sales_Report__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>