force-app/main/default/objects/Daily_Sales_Report__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Sales_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>