force-app/main/default/objects/Daily_Sales_Report__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Daily_Sales_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>