force-app/main/default/objects/Daily_Sales_Report__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <length>50</length>
    <type>Text</type>
</CustomField>