force-app/main/default/objects/Daily_Sales_Report__c/fields/Total_Distance_Covered_in_kms__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance_Covered_in_kms__c</fullName>
    <label>Total Distance Covered (in kms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>