force-app/main/default/objects/Daily_Sales_Report__c/fields/Zip_Postal_code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_code__c</fullName>
    <label>Zip/Postal code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>