force-app/main/default/objects/Daily_Sales_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Sales_Person__c</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Total_Distance_Covered_in_kms__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>