force-app/main/default/objects/Daily_Sales_Report__c/listViews/DSR_List_View.listView-meta.xml
<ListView>
    <fullName>DSR_List_View</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Total_Distance_Covered_in_kms__c</columns>
    <filterScope>Mine</filterScope>
    <label>DSR List View</label>
</ListView>